# sslang

./: .gitignore  CMakeLists.txt  README.md  parser.h  run.sh  run_test.rb
docs/: syntax.txt
src/: lexer.cpp  lexer.h  main.cpp  node.cpp  node.h  parser.cpp  parser.h  token.cpp  token.h  value.cpp  value.h
test/: case1.ss  eval.ss  lua.ss  syntax.ss
test_cases/: assign.ss  combination.ss  exp.ss  fib.ss  for.ss  function.ss  lambda.ss  sort.ss  syntax.ss  table.ss  unop.ss  ycombinator.ss
